added previews for emails

--- a/app/views/match_mailer/match_created.html.erb
+++ b/app/views/match_mailer/match_created.html.erb
@@ -1,5 +1,3 @@
-<h1>Hey</h1>
-
-<p>You have been matched!</p>
-
-<p>MentE</p>
+<% title = "New Shortlist Required" %>
+<% message = "Unfortunately, all of the mentors on your shortlist are taken. Please log in to your MentE account and create a new shortlist for #{@cohort.cohort_name}!" %>
+<%= render "shared/general_email_template", user: @user, title:, message: %>
