added email template folder, and rerouted emails to templates

--- a/app/views/cohort_mailer/shortlist_start_notification.html.erb
+++ b/app/views/cohort_mailer/shortlist_start_notification.html.erb
@@ -1,1 +1,1 @@
-<%= render "shortlist_open_email", user: @user, cohort: @cohort %>
+<%= render "email_templates/shortlist_open_email", user: @user, cohort: @cohort %>
