--- a/app/views/cohort_member_mailer/welcome_mail.html.erb
+++ b/app/views/cohort_member_mailer/welcome_mail.html.erb
@@ -1,1 +1,1 @@
-<%= render 'shared/welcome_email', cohort_member: @cohort_member %>
+<%= render 'email_templates/welcome_email', cohort_member: @cohort_member %>
