editing match emails to make sure things work

--- a/app/views/match_mailer/match_created.html.erb
+++ b/app/views/match_mailer/match_created.html.erb
@@ -1,3 +1,3 @@
-<% title = "New Shortlist Required" %>
-<% message = "Unfortunately, all of the mentors on your shortlist are taken. Please log in to your MentE account and create a new shortlist for #{@cohort.cohort_name}!" %>
+<% title = "You've Been Matched!" %>
+<% message = "You've met your match for #{@cohort.cohort_name}! Click through to find out more about your " %>
 <%= render "shared/general_email_template", user: @user, title:, message: %>
