--- a/app/views/email_templates/_welcome_email.html.erb
+++ b/app/views/email_templates/_welcome_email.html.erb
@@ -103,7 +103,7 @@
 <tbody>
 <tr>
 <td>
-<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; width: 600px; margin: 0 auto; background-color: #ffffff; background-image: url(<%= image_path "email/mentee-gradient.png" %>); background-repeat: no-repeat; background-size: cover; border-radius: 0;" width="600">
+<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000; background-color: #ffffff; background-image: url(<%= image_path "email/mentee-gradient.png" %>); background-repeat: no-repeat; background-size: cover; border-radius: 0; width: 600px; margin: 0 auto;" width="600">
 <tbody>
 <tr>
 <td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-bottom: 5px; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;" width="100%">
@@ -137,8 +137,6 @@
 <tr>
 <td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;padding-top:20px;width:100%;">
 <div align="center" class="alignment" style="line-height:10px">
-<div class="fullWidth" style="max-width: 560px;"><img alt="Alternate text" height="auto" src="images/email/mentee_gradient.PNG" style="display: block; height: auto; border: 0; width: 100%; border-radius: 10px;" title="Alternate text" width="560"/></div>
-</div>
 </td>
 </tr>
 </table>
@@ -230,7 +228,7 @@
 <tr>
 <td class="pad">
 <div align="center" class="alignment" style="line-height:10px">
-<div style="max-width: 42px;"><img alt="Alternate text" height="auto" src="images/email/icon_1.png" style="display: block; height: auto; border: 0; width: 100%; border-radius: 10px;" title="Alternate text" width="42"/></div>
+<div style="max-width: 42px;"><%= image_tag 'email/icon_1.png', display: "block", height: "auto", border: 0, width: "100%", borderradius: 10 %></div>
 </div>
 </td>
 </tr>
