--- a/app/views/email_templates/_welcome_email.html.erb
+++ b/app/views/email_templates/_welcome_email.html.erb
@@ -123,7 +123,7 @@
 <table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-size: auto; background-color: #ffffff; color: #000000; width: 600px; margin: 0 auto;" width="600">
 <tbody>
 <tr>
-<td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-left: 10px; padding-right: 10px; padding-top: 15px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;" width="100%">
+<td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-left: 10px; padding-right: 10px; padding-top: 15px; vertical-align: top; border: 0px; color: #000000; background-color: #ffffff; background-image: url(<%= image_path "email/mentee-gradient.png" %>); background-repeat: no-repeat; background-size: cover; border-radius: 0; width: 600px; margin: 0 auto;" width="600">
 <table border="0" cellpadding="10" cellspacing="0" class="image_block block-1" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
 <tr>
 <td class="pad">
@@ -257,7 +257,7 @@
 <tr>
 <td class="pad">
 <div align="center" class="alignment" style="line-height:10px">
-<div style="max-width: 42px;"><img alt="Alternate text" height="auto" src="images/email/icon_2.png" style="display: block; height: auto; border: 0; width: 100%; border-radius: 10px;" title="Alternate text" width="42"/></div>
+<div style="max-width: 42px;"><%= image_tag 'email/icon_2.png', display: "block", height: "auto", border: 0, width: "100%", borderradius: 10, alt: "heart icon"  %></div>
 </div>
 </td>
 </tr>
@@ -309,7 +309,7 @@
 <tr>
 <td class="pad">
 <div align="center" class="alignment" style="line-height:10px">
-<div style="max-width: 45px;"><img alt="Alternate text" height="auto" src="images/email/icon_3.png" style="display: block; height: auto; border: 0; width: 100%; border-radius: 10px;" title="Alternate text" width="45"/></div>
+<div style="max-width: 45px;"><%= image_tag 'email/icon_3.png', display: "block", height: "auto", border: 0, width: "100%", borderradius: 10, alt: "heart icon"  %></div>
 </div>
 </td>
 </tr>
@@ -395,7 +395,7 @@
 <tr>
 <td class="pad" style="padding-bottom:10px;padding-left:5px;padding-right:5px;padding-top:10px;width:100%;">
 <div align="center" class="alignment" style="line-height:10px">
-<div style="max-width: 120px;"><a href="http://www.example.com" style="outline:none" tabindex="-1" target="_blank"><img alt="Your Logo" height="auto" src="images/email/e8eed248-6d85-440d-807b-9b444e9e743b.png" style="display: block; height: auto; border: 0; width: 100%;" title="Your Logo" width="120"/></a></div>
+<div style="max-width: 120px;"><a href="http://www.example.com" style="outline:none" tabindex="-1" target="_blank"><%= image_tag 'email/e8eed248-6d85-440d-807b-9b444e9e743b.png', display: "block", height: "auto", border: 0, width: "100%",  %></a></div>
 </div>
 </td>
 </tr>
