finished swapping images into the welcome email

--- a/app/views/email_templates/_welcome_email.html.erb
+++ b/app/views/email_templates/_welcome_email.html.erb
@@ -395,7 +395,7 @@
 <tr>
 <td class="pad" style="padding-bottom:10px;padding-left:5px;padding-right:5px;padding-top:10px;width:100%;">
 <div align="center" class="alignment" style="line-height:10px">
-<div style="max-width: 120px;"><a href="http://www.example.com" style="outline:none" tabindex="-1" target="_blank"><%= image_tag 'email/e8eed248-6d85-440d-807b-9b444e9e743b.png', display: "block", height: "auto", border: 0, width: "100%",  %></a></div>
+<div style="max-width: 120px;"><a href="http://www.example.com" style="outline:none" tabindex="-1" target="_blank"><%= image_tag 'email/e8eed248-6d85-440d-807b-9b444e9e743b.png', display: "block", height: "auto", border: 0, width: "100%"%></a></div>
 </div>
 </td>
 </tr>
