updated shortlist open email

--- a/app/views/email_templates/_shortlist_open_email.html.erb
+++ b/app/views/email_templates/_shortlist_open_email.html.erb
@@ -179,7 +179,7 @@
 <td class="pad">
 <div style="color:#101112;direction:ltr;font-family:Lato, Tahoma, Verdana, Segoe, sans-serif;font-size:17px;font-weight:400;letter-spacing:0px;line-height:150%;text-align:center;mso-line-height-alt:25.5px;">
 <p style="margin: 0; margin-bottom: 16px;">Hello <%= user.first_name %>!</p>
-<p style="margin: 0;">The shortlist is now open and the matching period will begin on <%= cohort.shortlist_start_time.strftime("%A, %B %-d") %>. Click the button below or sign-in to MentE to create and submit your shortlist and begin your journey with your new Mentor! </p>
+<p style="margin: 0;">You can now create your shortlist before the matching period begins on <%= cohort.shortlist_start_time.strftime("%A, %B %-d") %>. Click the button below to select your potential mentors! </p>
 </div>
 </td>
 </tr>
