--- a/app/views/matches/_form_new.html.erb
+++ b/app/views/matches/_form_new.html.erb
@@ -23,7 +23,7 @@
 
   <div class="flex flex-col mb-4">
     <%= form.label :mentee_id, class: "font-medium mb-1" %>
-    <%= form.collection_select :mentee_id, User.mentees_in_cohort(cohort.id), :id, :name, { prompt: "Select a user" }, 
+    <%= form.collection_select :mentee_id, @cohort.unmatched_mentees, :id, :name, { prompt: "Select a user" }, 
     { class: "form-select border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" } %>
   </div>
 
