--- a/app/views/survey_mailer/notify_admin_of_survey_creation.html.erb
+++ b/app/views/survey_mailer/notify_admin_of_survey_creation.html.erb
@@ -1,3 +1,3 @@
 <% title = "New Survey Submitted!" %>
-<% message = "#{@survey.match.mentee.first_name} #{@survey.match.mentee.first_name} submitted their survey about #{@survey.match.mentor.first_name} #{@survey.match.mentor.last_name}! Click through to see what they had to say!" %>
+<% message = "#{@survey.match.mentee.first_name} #{@survey.match.mentee.last_name} submitted their survey about #{@survey.match.mentor.first_name} #{@survey.match.mentor.last_name}! Click through to see what they had to say!" %>
 <%= render "email_templates/general_email_template", user: @user, title:, message: %>
