--- a/app/views/match_mailer/match_created.html.erb
+++ b/app/views/match_mailer/match_created.html.erb
@@ -1,3 +1,3 @@
 <% title = "You've Been Matched!" %>
-<% message = "You've been paired with a mentor in #{@cohort.cohort_name}! Click through to meet your match!" %>
+<% message = "You've been paired with a partner in #{@cohort.cohort_name}! Click through to meet your match!" %>
 <%= render "email_templates/general_email_template", user: @user, title:, message: %>
