reroute cohorts index

--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -16,7 +16,7 @@
         </li>
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
           <i class="fas fa-folder-open mr-2"></i>
-          <%= link_to "Cohorts", program_cohorts_path(@current_program.id), class: "text-black" %>
+          <%= link_to "Cohorts", cohorts_url, class: "text-black" %>
         </li>
         <li class="flex items-center hover:bg-gray-100 p-2 rounded transition-colors duration-200">
           <i class="fas fa-envelope mr-2"></i> Message 
