--- a/app/views/shared/_landing_nav.html.erb
+++ b/app/views/shared/_landing_nav.html.erb
@@ -6,6 +6,7 @@
     <ul class="flex gap-10 text-s font-normal text-black max-w-[26]">
       <li><a href="/" class="hover:text-gray-600 font-semibold">Home</a></li>
       <li><a href="/" class="hover:text-gray-600">Demo</a></li>
+      <li><a href="/" class="hover:text-gray-600">Mentorship</a></li>
       <% if user_signed_in? %>
         <%= link_to "Dashboard", dashboard_path(role: current_user.role), class: "hover:text-gray-600" %>
       <% else %>
