--- a/app/views/shared/_landing_nav_mb.html.erb
+++ b/app/views/shared/_landing_nav_mb.html.erb
@@ -9,6 +9,7 @@
     <ul class="text-[1.5rem] font-normal text-center my-[8rem] flex flex-col gap-[3rem]">
       <li><a href="/" class="hover:font-semibold">Home</a></li>
       <li><a href="/" class="hover:font-semibold">Demo</a></li>
+      <li><a href="/" class="hover:font-semibold">Mentorship</a></li>
       <% if user_signed_in? %>
         <%= link_to "Dashboard", dashboard_path(role: current_user.role), class: "hover:font-semibold" %>
       <% else %>
