added bento to mentorship page

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -1,4 +1,30 @@
-<div>
+<div class="container mt-32 mx-auto px-auto">
     <div class="gradient gradient-left"></div>
     <div class="gradient gradient-right"></div>
+    <div class="mt-15">
+        <h4 class="text-base font-semibold mt-5">Give Back By</h4>
+        <h2 class="text-5xl text-black-500/100 font-bold">Becoming A DPI Mentor</h2>
+    </div>
+    <div class="my-10">
+        <p>
+            <span class="font-bold">Discovery Partners Institute<span> (DPI) is training the next generation of Illinois's tech talent, and we'd love to have your help.
+                Our enthusiastic trainees are eager for positions where they can grow into valuable leaders and community members, 
+                and they need someone like you to guide them on their journeys.
+        </p>
+    </div>
+    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-auto p-4 rounded-md my-12 grid-flow-dense">
+   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4" style={{backgroundColor: "#f5f5f5"}}>
+        We're looking for leaders with:
+            <ul>
+                <li>At least four years of experience in their field</li>
+                <li>Preferably a background in tech, design, or business</li>
+                <li>The ability to meet at least once every two weeks</li>
+                <li>The ability to attend at least six 30-minute meetings</li>
+            </ul>
+   </div>
+   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+</div>
 </div>
