--- a/app/views/meetings/_mentee_meeting_table.html.erb
+++ b/app/views/meetings/_mentee_meeting_table.html.erb
@@ -10,6 +10,8 @@
 <p class="text-sm text-[#898989] mb-5">
   Where conversations spark growth. Schedule your next meeting with your mentor today!
 </p>
+<div class="overflow-y-auto max-h-[28.5rem] border border-gray-300 rounded-md">
+
 <table class="w-full text-[0.8rem] text-center rtl:text-right text-[#898989]">
   <thead class="text-xs text-white bg-[#202020] rounded-t-lg">
   <tr>
@@ -74,6 +76,7 @@
   </tbody>
 </table>
 
+</div>
 
 <div id="viewNoteModal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
   <div class="relative p-4 w-full max-w-2xl max-h-full">
