--- a/app/views/meetings/_mentor_meeting_table.html.erb
+++ b/app/views/meetings/_mentor_meeting_table.html.erb
@@ -19,6 +19,7 @@
     <%= i +1 %>. <%= mentee.name %>
   </h2>
 
+<div class="overflow-y-auto max-h-[28rem] ">
   <table class="w-full text-[0.8rem] text-center rtl:text-right text-[#898989] mt-4">
     <thead class="text-xs text-white bg-[#202020] rounded-t-lg">
     <tr>
@@ -78,6 +79,7 @@
     <% end %>
     </tbody>
   </table>
+</div>
 <% end %>
 
 
