--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -1,40 +1,18 @@
 <div class="bg-white flex justify-center w-full mt-16">
-  <div class="relative bg-white w-full min-h-screen flex flex-col lg:flex-row lg:flex-grow">
-    
-    <!-- right section with form (60% width) -->
+  <div class="relative w-full min-h-screen flex flex-col lg:flex-row">
+    <!-- Left side: Form section -->
     <div class="flex flex-col items-center w-full lg:w-3/5 lg:flex-grow px-4 lg:px-12 py-12">
-      
-      <div data-controller="signup">
-        <button data-signup-target="menteeButton" class="w-full lg:w-[150px] h-10 bg-[#517879] text-white font-bold rounded shadow-sm hover:bg-[#3e6176] active:bg-[#3e6176]" data-action="signup#showForm" data-signup-content-param="menteeForm">
-          Mentee Sign-up
-        </button>
-        
-        <button data-signup-target="mentorButton" class="w-full lg:w-[150px] h-10 bg-[#517879] text-white font-bold rounded shadow-sm hover:bg-[#3e6176] active:bg-[#3e6176]" data-action="signup#showForm" data-signup-content-param="mentorForm">
-          Mentor Sign-up
-        </button>
-        
-        <!-- form content -->
-        <div>
-          <div data-signup-target="mentorForm" hidden>
-            <%= render partial: "users/registrations/mentor_form" %>
-          </div>
-          <div data-signup-target="menteeForm">
-            <%= render partial: "users/registrations/mentee_form" %>
-          </div>
-        </div>
-      </div>
-
+      <%= render partial: "users/registrations/mentee_form" %>
       <div class="mt-8 flex items-center justify-center space-x-2">
         <span class="text-gray-400 font-bold">Already a user?</span>
-        <%= link_to "Login", new_user_session_path, class: "text-[#476d73] font-bold underline" %>
+        <%= link_to "Login", new_user_session_path, class: "text-black font-bold underline" %>
       </div>
     </div>
 
-    <!-- left section with background gradient and logo (40% width) -->
-    <div class="w-full lg:w-2/5 min-h-full bg-gradient-to-b from-[#517879] to-[#1e3e57]">
-      <div class="flex justify-center items-center h-full">
-        <%= image_tag 'sample_img/dpi_logo_2.png', class: "mx-auto", alt: "DPI Logo" %>
-      </div>
-    </div>
+  <!-- Right side: Image section (hidden on small screens) -->
+<div class="hidden lg:flex w-full lg:w-2/5 min-h-screen bg-gradient-to-b from-black to-slate-950 items-center justify-center">
+  <%= image_tag 'sample_img/dpi_logo_2.png', class: "w-4/5 max-w-md", alt: 'DPI Logo' %>
+</div>
+
   </div>
 </div>
