removed bounce animation from hero section

--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -4,7 +4,7 @@
   <div class="font-light text-center w-full mt-16 mb-5 text-5xl">
     Transform <span class="italic">potential</span><br>into progress through<br>
   </div>
-  <div class="font-bold text-6xl hover:animate-bounce 1s">MentE</div>
+  <div class="font-bold text-6xl">MentE</div>
   <div class="mt-8">
     <button class="bg-gray-900 text-white px-6 py-3 text-s rounded-md hover:scale-105 transition">
       <% if user_signed_in? %>
