--- a/app/views/shared/_landing_nav.html.erb
+++ b/app/views/shared/_landing_nav.html.erb
@@ -1,35 +1,29 @@
-<div class="flex flex-row justify-between pt-10 px-28 w-full max-md:hidden">
-  <a href="/">
-    <img src="<%= asset_path("icon/Logo.svg") %>" alt="DPI Logo" class="h-[2.5rem]">
+<div class="flex flex-row items-center pt-10 px-28 w-full max-md:hidden">
+  <a href="/" class="flex-shrink-0">
+    <img src="<%= asset_path('icon/Logo.svg') %>" alt="DPI Logo" class="h-[2.5rem]">
   </a>
-  <div class="bg-white opacity-70 flex items-center	justify-around border-slate-300 rounded-2xl w-[20rem] h-[3.2rem]">
-    <ul class="flex gap-10 text-s font-normal text-black max-w-[26]">
-      <% if user_signed_in? %>
-        <%= link_to "Dashboard", dashboard_path(role: current_user.role), class: "hover:text-gray-600" %>
-      <% else %>
-        <%= link_to "Dashboard", new_user_session_path %>
-      <% end %>
-    </ul>
+  
+  <div class="flex-1 flex justify-end">
+    <% if user_signed_in? %>
+      <div class="bg-white flex items-center justify-center border-slate-300 rounded-2xl w-[20rem] h-[3.2rem]">
+        <ul class="flex items-center justify-center gap-10 text-sm font-normal text-black">
+          <li>
+            <%= link_to "Dashboard", dashboard_path(role: current_user.role), class: "hover:text-gray-600" %>
+          </li>
+          <li class="text-black hover:text-gray-600">
+            <%= link_to "Edit", edit_user_registration_path %>
+          </li>
+          <li>
+            <%= button_to "Sign Out", destroy_user_session_path, 
+                method: :delete, 
+                data: { turbo: false },
+                class: "text-sm font-medium z-3 bg-black text-white border border-transparent rounded-md py-2 px-5 hover:bg-gray-600" %>
+          </li>
+        </ul>
+      </div>
+    <% else %>
+      <%= link_to "Sign In", new_user_session_path, 
+          class: "text-sm font-medium bg-black text-white border border-transparent rounded-md py-2 px-5 hover:scale-105" %>
+    <% end %>
   </div>
-  <% if user_signed_in? %>
-    <div class="flex gap-4 items-center">
-      <div class="text-s text-[#676666] font-normal">
-        <%= link_to "Edit", edit_user_registration_path %>
-      </div>
-      <div class="text-s font-medium bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md
-             py-2 px-5 mr-auto hover:scale-105">
-        <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
-      </div>
-    </div>
-  <% else %>
-    <div class="flex gap-4 items-center">
-      <div class="text-s text-[#676666]">
-        <%= link_to "Sign Up", mentor_mentee_registration_path(signup_type: "mentee") %>
-      </div>
-      <div class="text-sm font-medium bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md
-             py-2 px-5 mr-auto hover:scale-105">
-        <%= link_to "Sign In", new_user_session_path, method: :delete, data: { turbo: false } %>
-      </div>
-    </div>
-  <% end %>
 </div>
