--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -1,7 +1,8 @@
-<div class="bg-white flex justify-center w-full mt-16">
-  <div class="relative w-full min-h-screen flex flex-col lg:flex-row">
-    <!-- Left side: Form section -->
-    <div class="flex flex-col items-center w-full lg:w-3/5 lg:flex-grow px-4 lg:px-12 py-12">
+<div class="flex justify-center w-full mt-10">
+  <div class="relative w-full flex flex-col lg:flex-row items-stretch">
+    
+   
+    <div class="flex flex-col items-center w-full lg:w-3/5 px-4 lg:px-12 py-12">
       <%= render partial: "users/registrations/mentee_form" %>
       <div class="mt-8 flex items-center justify-center space-x-2">
         <span class="text-gray-400 font-bold">Already a user?</span>
@@ -9,10 +10,13 @@
       </div>
     </div>
 
-  <!-- Right side: Image section (hidden on small screens) -->
-<div class="hidden lg:flex w-full lg:w-2/5 min-h-screen bg-gradient-to-b from-black to-slate-950 items-center justify-center">
-  <%= image_tag 'sample_img/dpi_logo_2.png', class: "w-4/5 max-w-md", alt: 'DPI Logo' %>
-</div>
-
+    <div class="hidden lg:flex w-full lg:w-3/5 p-12">
+      <div class="bg-gradient-to-b from-black to-slate-950 rounded-sm p-8 flex flex-col items-center justify-center w-full h-full">
+        <%= image_tag 'sample_img/dpi_logo_2.png', 
+            class: "w-4/5 max-w-md mx-auto", 
+            alt: 'DPI Logo' %>
+      </div>
+    </div>
+  
   </div>
 </div>
