made color updates

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex items-center justify-center bg-gray-100 pt-20">
+<div class="min-h-screen flex items-center justify-center pt-20">
   <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-2xl">
     <h2 class="text-2xl font-semibold text-center mb-6">Edit <%= resource_name.to_s.humanize %></h2>
     <%= form_for(resource, url: registration_path(resource_name), html: { method: :put, id: "update-form" }) do |f| %>
