--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -1,30 +1,65 @@
-<div class="container mt-32 mx-auto px-auto">
+<div class="container mt-32 mx-auto px-auto w-auto">
     <div class="gradient gradient-left"></div>
     <div class="gradient gradient-right"></div>
     <div class="mt-15">
         <h4 class="text-base font-semibold mt-5">Give Back By</h4>
-        <h2 class="text-5xl text-black-500/100 font-bold">Becoming A DPI Mentor</h2>
+        <h2 class="sm:text-2xl md:text-5xl text-black-500/100 font-bold">Becoming A DPI Mentor</h2>
     </div>
     <div class="my-10">
         <p>
-            <span class="font-bold">Discovery Partners Institute<span> (DPI) is training the next generation of Illinois's tech talent, and we'd love to have your help.
+            <span class="font-bold">Discovery Partners Institute</span> (DPI) is training the next generation of Illinois's tech talent, and we'd love to have your help.
                 Our enthusiastic trainees are eager for positions where they can grow into valuable leaders and community members, 
                 and they need someone like you to guide them on their journeys.
         </p>
     </div>
-    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-auto p-4 rounded-md my-12 grid-flow-dense">
-   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4" style={{backgroundColor: "#f5f5f5"}}>
-        We're looking for leaders with:
+    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-auto p-4 rounded-md my-12 grid-flow-dense block">
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4" style={{backgroundColor: "#f5f5f5"}}></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+    </div>
+   <div class="block align-middle justify-start my-10">
+         <span class="font-bold italic">We're looking for leaders with:</span>
             <ul>
-                <li>At least four years of experience in their field</li>
-                <li>Preferably a background in tech, design, or business</li>
-                <li>The ability to meet at least once every two weeks</li>
-                <li>The ability to attend at least six 30-minute meetings</li>
+                <li>• At least four years of experience in their field</li>
+                <li>• Preferably a background in tech, design, or business</li>
+                <li>• The ability to meet at least once every two weeks</li>
+                <li>• The ability to attend at least six 30-minute meetings</li>
             </ul>
    </div>
-   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-   <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-</div>
+   <div class="block align-middle justify-end text-right mb-10 w-48">
+         <p>
+            DPI mentorship is a great way to connect with our diverse talent from all walks of life. You'll be guiding one or more Chicagoans through the unspoken rules of the business world and helping them find their footing in an ever-changing job market.
+         </p>
+   </div>
+   <div class="mb-10">
+        <h2 class="font-bold">We place our trainees in various fields</h2>
+        <p>Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
+        <div>
+            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        </div>
+   </div>
+   <div>
+        <p>If you're unable to commit to a long-term mentorship, then join us for a Riverside Chat!</p>
+   </div>
+   <div>
+        <p>What is a</p>
+        <h3>Riverside</h3>
+        <p><span class="font-bold italic">Get to know the DPI team</span> and hear from our talent network by joining us for a Riverside Chat! This ia a casual question-and-answer session where our staff will explore your background and the "whys" behind your success.</p>
+        <p><span class="font-bold italic">Riverside Chats</span> present a unique opportunity to meet our trainees and answer their insightful questions about your field of work. We've had cutting-edge leaders from companies like Salesforce, Capital One, ShipBob, and Bank of America join us for Riversides.</p>
+        <p>Along with the trainees, we'll discuss how DPI can <span class="font-bold italic">boost your business</span> through our Tech Accelerator.</p>
+   </div>
+   <div>
+        <div class="gradient gradient-left"></div>
+        <div class="gradient gradient-right"></div>
+        <div>Make an Impact Today!</div>
+        <div>
+            <div>
+                <p>Whether it's through mentorship or just a few hours at a Riverside Chat, you can permanently change the future of technology in Illinois. This small commitment can make a difference in someone's life and career trajectory.</p>
+                <p>We appreciate your interest in spending time with DPI. If you'd like to learn more, please send an email and we'll be in touch soon.</p>
+                <button>Contact DPI</button>
+            </div>
+        </div>
+   </div>
 </div>
