--- a/app/views/cohort_members/_mentor_mentee_section.html.erb
+++ b/app/views/cohort_members/_mentor_mentee_section.html.erb
@@ -15,6 +15,6 @@
 
   <!-- Email List -->
   <div class="bg-gray-50 h-32 border border-gray-200 rounded-lg overflow-y-auto p-2 shadow-inner" id="<%= list_id %>">
-    <!-- Emails will be dynamically appended here by JavaScript -->
+    <!-- Emails will dynamically appear here via JavaScript -->
   </div>
 </div>
