Removed .user.email

--- a/app/views/cohort_members/index.html.erb
+++ b/app/views/cohort_members/index.html.erb
@@ -37,7 +37,7 @@
                        alt="Profile Picture" class="w-full h-full object-cover">
                 </div>
               </td>
-              <td class="py-4 px-6 text-sm text-gray-800"><%= member.user.email %></td>
+              <td class="py-4 px-6 text-sm text-gray-800"><%= member.email %></td>
               <td class="py-4 px-6 text-sm text-gray-800">
                 <%= member.cohort.program.name if member.cohort.program %>
               </td>
