--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -5,14 +5,14 @@
         <h4 class="text-base font-semibold mt-5">Give Back By</h4>
         <h2 class="sm:text-2xl md:text-5xl text-black-500/100 font-bold">Becoming A DPI Mentor</h2>
     </div>
-    <div class="my-10">
+    <div class="my-10 text-lg">
         <p>
             <span class="font-bold">Discovery Partners Institute</span> (DPI) is training the next generation of Illinois's tech talent, and we'd love to have your help.
                 Our enthusiastic trainees are eager for positions where they can grow into valuable leaders and community members, 
                 and they need someone like you to guide them on their journeys.
         </p>
     </div>
-    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-auto p-4 rounded-md my-12 grid-flow-dense block">
+    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-auto p-4 rounded-md my-12 grid-flow-dense">
         <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4" style={{backgroundColor: "#f5f5f5"}}></div>
         <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
         <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
@@ -28,24 +28,24 @@
                 <li>• The ability to attend at least six 30-minute meetings</li>
             </ul>
    </div>
-   <div class="block align-middle justify-end text-right mb-10 w-48">
-         <p>
-            DPI mentorship is a great way to connect with our diverse talent from all walks of life. You'll be guiding one or more Chicagoans through the unspoken rules of the business world and helping them find their footing in an ever-changing job market.
+   <div class="block align-middle justify-end text-start my-10 min-h-64">
+         <p class="float-end w-96 text-lg">
+            <span class="font-bold">DPI mentorship is a great way to connect with our diverse talent from all walks of life.</span>You'll be guiding one or more Chicagoans through the unspoken rules of the business world and helping them find their footing in an ever-changing job market.
          </p>
    </div>
-   <div class="mb-10">
+   <div class="mb-10 sm:text-md md:text-lg">
         <h2 class="font-bold">We place our trainees in various fields</h2>
         <p>Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
         <div>
             <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
         </div>
    </div>
-   <div>
+   <div class="mb-10">
         <p>If you're unable to commit to a long-term mentorship, then join us for a Riverside Chat!</p>
    </div>
-   <div>
+   <div class="mb-10">
         <p>What is a</p>
-        <h3>Riverside</h3>
+        <h3 class="text-3xl font-bold mb-5">Riverside</h3>
         <p><span class="font-bold italic">Get to know the DPI team</span> and hear from our talent network by joining us for a Riverside Chat! This ia a casual question-and-answer session where our staff will explore your background and the "whys" behind your success.</p>
         <p><span class="font-bold italic">Riverside Chats</span> present a unique opportunity to meet our trainees and answer their insightful questions about your field of work. We've had cutting-edge leaders from companies like Salesforce, Capital One, ShipBob, and Bank of America join us for Riversides.</p>
         <p>Along with the trainees, we'll discuss how DPI can <span class="font-bold italic">boost your business</span> through our Tech Accelerator.</p>
