renamed company images and continued formatting about mentorship page

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -12,7 +12,7 @@
                 and they need someone like you to guide them on their journeys.
         </p>
     </div>
-    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-auto p-4 rounded-md my-12 grid-flow-dense">
+    <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-20 p-4 rounded-md my-12 grid-flow-dense">
         <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4" style={{backgroundColor: "#f5f5f5"}}></div>
         <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
         <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
@@ -33,15 +33,18 @@
             <span class="font-bold">DPI mentorship is a great way to connect with our diverse talent from all walks of life.</span>You'll be guiding one or more Chicagoans through the unspoken rules of the business world and helping them find their footing in an ever-changing job market.
          </p>
    </div>
-   <div class="mb-10 sm:text-md md:text-lg">
-        <h2 class="font-bold">We place our trainees in various fields</h2>
-        <p>Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
-        <div>
-            <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+   <div class="mb-10">
+        <h2 class="font-bold text-3xl">We place our trainees in various fields</h2>
+        <p class="mb-5 text-xl">Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
+        <div class="flex row justify-between">
+            <%= image_tag 'companies/CIBC.svg', class: 'h-20' %>
+            <%= image_tag 'companies/HCSC.svg', class: 'h-20'  %>
+            <%= image_tag 'companies/SAP.svg', class: 'h-20'  %>
+            <%= image_tag 'companies/ULS.svg', class: 'h-20'  %>
         </div>
    </div>
-   <div class="mb-10">
-        <p>If you're unable to commit to a long-term mentorship, then join us for a Riverside Chat!</p>
+   <div class="my-32 w-80">
+        <p class="text-2xl">If you're unable to commit to a long-term mentorship, then <span class="font-bold">join us for a Riverside Chat!</span></p>
    </div>
    <div class="mb-10">
         <p>What is a</p>
