got basic page formatting down

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -1,4 +1,7 @@
 <div class="container mt-32 mx-auto px-auto w-auto">
+    <div>
+
+    </div>
     <div class="gradient gradient-left"></div>
     <div class="gradient gradient-right"></div>
     <div class="mt-15">
@@ -37,7 +40,7 @@
         <h2 class="font-bold text-3xl">We place our trainees in various fields</h2>
         <p class="mb-5 text-xl">Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
         <div class="flex row justify-between">
-            <%= image_tag 'companies/ULS.svg', class: 'sm:h-12 md:h-20'  %>
+            <%= image_tag 'companies/ULS.svg', class: 'sm:h-12 md:h-12'  %>
             <%= image_tag 'companies/SAP.svg', class: 'sm:h-12 md:h-20'  %>
             <%= image_tag 'companies/CIBC.svg', class: 'sm:h-12 md:h-20' %>
             <%= image_tag 'companies/United.svg', class: 'sm:h-12 md:h-20' %>
@@ -63,10 +66,10 @@
                 <div class="gradient gradient-left"></div>
                 <div class="gradient gradient-right"></div>
                 <div class="text-5xl font-black col-span-3">Make an Impact Today!</div>
-                <div class="bg-red-500 text-xl col-span-3">
+                <div class="text-xl col-span-3 flex flex-col items-center justify-center">
                     <p class="mb-5">Whether it's through mentorship or just a few hours at a Riverside Chat, you can permanently change the future of technology in Illinois. This small commitment can make a difference in someone's life and career trajectory.</p>
                     <p class="mb-5">We appreciate your interest in spending time with DPI. If you'd like to learn more, please send an email and we'll be in touch soon.</p>
-                    <button class="place-self-center bg-black text-white p-3 rounded-lg flex row align-center justify-items-center"><p>Contact DPI</p> <%= image_tag 'icon/right_circle.png', class: 'h-5 ml-2 self-center' %></button>
+                    <button class=" bg-black text-white p-3 rounded-lg flex row items-center"><p>Contact DPI</p> <%= image_tag 'icon/right_circle.png', class: 'h-5 ml-2 self-center' %></button>
                 </div>
             </div>
         </div>
