added button partial for mentorship page, completed basic layout

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -1,6 +1,12 @@
 <div class="container mt-32 mx-auto px-auto w-auto">
-    <div>
-
+    <div class="my-36 justify-center flex flex-col items-center">
+        <p>A little bit</p>
+        <h3 class="font-extrabold text-6xl">About DPI</h3>
+        <p class="font-bold text-2xl italic">Discovery Partners Institute</p>
+        <p class="text-2xl">empowers people to jumpstart</p>
+        <p class="text-2xl">their tech careers or companies</p>
+        <p class="text-2xl mb-5">in Chicago.</p>
+        <%= render 'shared/mentorship_btn', text: "Learn More", link: "https://dpi.uillinois.edu/" %>
     </div>
     <div class="gradient gradient-left"></div>
     <div class="gradient gradient-right"></div>
@@ -40,11 +46,11 @@
         <h2 class="font-bold text-3xl">We place our trainees in various fields</h2>
         <p class="mb-5 text-xl">Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
         <div class="flex row justify-between">
-            <%= image_tag 'companies/ULS.svg', class: 'sm:h-12 md:h-12'  %>
-            <%= image_tag 'companies/SAP.svg', class: 'sm:h-12 md:h-20'  %>
-            <%= image_tag 'companies/CIBC.svg', class: 'sm:h-12 md:h-20' %>
-            <%= image_tag 'companies/United.svg', class: 'sm:h-12 md:h-20' %>
-            <%= image_tag 'companies/HCSC.svg', class: 'sm:h-12 md:h-20'  %>
+            <%= image_tag 'companies/ULS.svg', class: 'xs:h-4 sm:h-12 lg:h-20'  %>
+            <%= image_tag 'companies/SAP.svg', class: 'xs:h-4 sm:h-12 lg:h-20'  %>
+            <%= image_tag 'companies/CIBC.svg', class: 'xs:h-4 sm:h-12 lg:h-20' %>
+            <%= image_tag 'companies/United.svg', class: 'xs:h-4 sm:h-12 lg:h-20' %>
+            <%= image_tag 'companies/HCSC.svg', class: 'xs:h-4 sm:h-12 lg:h-20'  %>
         </div>
    </div>
    <div class="my-32 w-80">
@@ -69,7 +75,7 @@
                 <div class="text-xl col-span-3 flex flex-col items-center justify-center">
                     <p class="mb-5">Whether it's through mentorship or just a few hours at a Riverside Chat, you can permanently change the future of technology in Illinois. This small commitment can make a difference in someone's life and career trajectory.</p>
                     <p class="mb-5">We appreciate your interest in spending time with DPI. If you'd like to learn more, please send an email and we'll be in touch soon.</p>
-                    <button class=" bg-black text-white p-3 rounded-lg flex row items-center"><p>Contact DPI</p> <%= image_tag 'icon/right_circle.png', class: 'h-5 ml-2 self-center' %></button>
+                    <%= render 'shared/mentorship_btn', text: "Contact DPI", link: "email-to:info@dpi.dev" %>
                 </div>
             </div>
         </div>
