--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>MentE::DPI Mentorship Platform</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/svg" href="/assets/icon/mente_logo.svg">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <script src="https://cdn.tailwindcss.com"></script>
